mdapipkg/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>KGRenewal__Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not this Asset is available for renewal. An expired Asset cannot be renewed.</description>
        <label>Nonrenewing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ListPrice__c</fullName>
        <description>The list price of the item at the time of sale. This may differ from the price the Asset was sold at.</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity that generated or last updated this Asset.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ProductPriceTerm__c</fullName>
        <formula>IF(ISNULL(Product2.KGRenewal__PriceTerm__c), 1, Product2.KGRenewal__PriceTerm__c)</formula>
        <label>Product Price Term (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__RenewedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed To</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Subscription2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>KGRenewal__Subscription__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__TermPrice__c</fullName>
        <label>Total Term Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Term__c</fullName>
        <label>Latest Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>